# feeder-service

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  PLAN.md  PR_DESCRIPTION.md  RESEARCH.md  SPEC.md  build.rs  parsed.json  response.json  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ai-agent.yml  rust-tests.yml
context/: files.txt
docs/: ai-agent-context-compression.md  high-funding-rate.md  news-correlation.md  news-price-correlation-and-telegram.md  quant-vector-15m.md  quant-vector-4h.md  rust-tests-workflow.md  telegram-notifier.md  time-resistance.md  websocket-disconnect-reasons.md
proto/: market.proto
src/: big_move_detector.rs  binance.rs  binance_depth.rs  binance_depth_tests.rs  binance_funding.rs  binance_funding_tests.rs  binance_kline.rs  binance_kline_tests.rs  binance_tests.rs  config.rs  feeder.rs  json_helpers.rs  lib.rs  main.rs  time_helpers.rs  ws_helpers.rs
src/correlation/: engine.rs  model.rs
src/news/: correlation.rs  mod.rs  store.rs  tagging.rs  types.rs
src/notifiers/: telegram.rs
src/notify/: mod.rs  telegram.rs
src/refactor/: big_move_detector.rs  mod.rs
tests/: binance_streams_integration.rs  context_service_compression_e2e.rs  e2e_context_service_compression.sh  news_correlation_e2e.rs  news_price_correlation_e2e.rs  news_store_symbol_index_e2e.rs  news_telegram_rollout_env_e2e.rs  quant_vector_15m_e2e.rs  quant_vector_4h_e2e.rs  quant_vector_4h_open_kline_no_signal_e2e.rs  rust_tests_workflow_e2e.rs  telegram_alert_e2e.rs  telegram_notifier_e2e.rs  ws_disconnect_reason_e2e.rs
(+1 files in other folders)
