[package]
name = "feeder-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"