[package]
name = "feeder-service"
version = "0.1.0"
edition = "2024"
default-run = "feeder-service"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"


tokio-stream = "0.1"
url = "2.5.8"
chrono = "0.4.43"
simd-json = "0.17.0"
dotenv = "0.15.0"
local-ip-address = "0.6.10"
warp = { version = "0.4.2", features = ["websocket", "server"] }